# faasm

./: .clang-format  .clang-tidy  .dockerignore  .env  .gdbinit  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  .ycm_extra_conf.py  AWS.md  CMakeLists.txt  Dockerfile  LLVMToolchain.cmake  Makefile  PYTHON.md  Pywren.md  README.md  WasmToolchain.cmake  base.dockerfile  bash_env.sh  callgrind.out.4609  cliff.toml  codecov.yml  compile.py  compile.sh  docker-compose-cli.yml  docker-compose-dev.yml  docker-compose-ibm.env  docker-compose-ibm.yml  docker-compose-k8s.yml  docker-compose-knative.yml  docker-compose-native.yml  docker-compose-old.yml  docker-compose-test.yml  docker-compose.env  docker-compose.yml  download_toolchain.py  edge.dockerfile  (+20 more)
experiment/static-check/: CMakeLists.txt  dummy.cpp  dummy.h  wasm_build.sh
experiment/wasm_lib/: CMakeLists.txt  build.sh  lib_experiment.cpp  lib_experiment.h
func/: .gitignore  CMakeLists.txt  function_chain.c  function_cpu.c  function_curl.c  function_curl.cpp  function_dummy.c  function_echo.c  function_echo.cpp  function_echopp.cpp  function_net.c  function_net.cpp  function_sock.c  function_x2.c  knative_native.py  native_runner.c  native_runner.cpp  python_lib_files.txt  run_knative_native.sh
func/broken/: function_file.c  function_malloc.c  function_sleep.c
func/demo/: CMakeLists.txt  abort.cpp  argc_argv.cpp  argc_argv_test.cpp  argv.cpp  backtrace.cpp  blas.cpp  blas_check.c  blas_check.cpp  brk.cpp  c_example.c  calloc.cpp  chain.cpp  chain_named_a.cpp  chain_named_b.cpp  chain_named_c.cpp  chain_output.cpp  chain_simple.cpp  check_input.cpp  conf_flags.cpp  cpp_example.cpp  curl.cpp  curl_net.cpp  dummy.cpp  dynlink.cpp  echo.cpp  eigen.cpp  eigen_vec.cpp  emscripten_check.cpp  errno.cpp  exit.cpp  fcntl.cpp  fibonacci.cpp  file.cpp  filedescriptor.cpp  float_perf.cpp  fprintf.cpp  fread.cpp  fstat.cpp  getcwd.cpp  (+75 more)
func/dynlink/: CMakeLists.txt
func/errors/: CMakeLists.txt  bad_malloc.cpp  multi_poll.cpp  munmap.cpp  open_blocked.cpp  open_blocked2.cpp  pthread_creation.cpp  ret_one.cpp  socket.cpp  stackoverflow.cpp  stdin_poll.cpp
func/fakelib/: CMakeLists.txt
func/gene/: CMakeLists.txt  mapper.cpp
func/libfake/: CMakeLists.txt
func/mpi/: CMakeLists.txt  hellompi.cpp  mpi_allgather.cpp  mpi_allreduce.cpp  mpi_alltoall.cpp  mpi_barrier.cpp  mpi_bcast.cpp  mpi_cart_create.cpp  mpi_cartesian.cpp  mpi_checks.cpp  mpi_compat.cpp  mpi_gather.cpp  mpi_isendrecv.cpp  mpi_onesided.cpp  mpi_order.cpp  mpi_probe.cpp  mpi_put.cpp  mpi_reduce.cpp  mpi_reduce_dbl.cpp  mpi_scan.cpp  mpi_scatter.cpp  mpi_sendrecv.cpp  mpi_status.cpp  mpi_types.cpp  mpi_typesize.cpp  mpi_wincreate.cpp
func/omp/: CMakeLists.txt  Makefile  create-parallel.cpp  custom_reduce.cpp  docker_benchmarker.cpp  for_static_schedule.cpp  header_api_support.cpp  hellomp.cpp  hellompi.cpp  intel_nstreams.c  intel_nstreams.cpp  intel_synch_p2p.cpp  intel_transpose.cpp  mt_pi.cpp  multi_cr.cpp  multi_cr_local.cpp  multi_pi.cpp  multi_sum.cpp  multi_thread_sum.cpp  nested_levels_test.cpp  nested_parallel.cpp  omp_checks.cpp  omp_helper.h  pi_calculation.cpp  reduce_examples.cpp  reduction_average.cpp  reduction_integral.cpp  setting_num_threads.cpp  simple_barrier.cpp  simple_critical.cpp  simple_flush.cpp  simple_for.cpp  simple_master.cpp  simple_reduce.cpp  simple_single.cpp  stack_debug.cpp  target_integral.cpp
func/onnx/: CMakeLists.txt  candy.c  candy.cpp
func/polybench/: CMakeLists.txt  README.md
func/python/: CMakeLists.txt  bench_chaos.py  bench_deltablue.py  bench_dulwich.py  bench_fannkuch.py  bench_float.py  bench_genshi.py  bench_go.py  bench_hexiom.py  bench_json_dumps.py  bench_json_loads.py  bench_logging.py  bench_mdp.py  bench_nbody.py  bench_pickle.py  bench_pidigits.py  bench_pyaes.py  bench_pyflate.py  bench_raytrace.py  bench_richards.py  bench_scimark.py  bench_spectral_norm.py  bench_telco.py  bench_unpack_sequence.py  bench_version.py  bench_xml_etree.py  c_hello.c  chain.py  ctype_check.py  ctypes_check.py  ctypes_test.py  dict_state.py  dir_test.py  echo.py  env_check.py  faasm_test.py  file_check.py  hash_check.py  hello.py  horovod.py  (+17 more)
func/sgd/: CMakeLists.txt  reuters_svm.cpp  sgd_barrier.cpp  sgd_begin.cpp  sgd_constants.h  sgd_data.cpp  sgd_epoch.cpp  sgd_finished.cpp  sgd_loss.cpp  sgd_step.cpp  svm_begin.cpp
func/sgx/: CMakeLists.txt  chaining_sgx_wamr.cpp  hello_world.cpp  hello_world_sgx_wamr.cpp  puts.cpp  puts_sgx_wamr.cpp
func/svm/: CMakeLists.txt  svm_constants.h  svm_step.cpp
func/tf/: CMakeLists.txt  bitmap_helpers.cc  get_top_n.h  get_top_n_impl.h  image.cc  image.h  minimal.cpp
func/wamr/: CMakeLists.txt  chaining_external_func_sgx_wamr.cpp  chaining_external_sgx_wamr.cpp  chaining_internal_sgx_wamr.cpp  chaining_sgx_wamr.cpp  echo_sgx_wamr.cpp  get_input_sgx_wamr.cpp  hello_world.cpp  hello_world_sgx_wamr.cpp  puts.cpp  (+4 more)
lambda/: .gitignore  CMakeLists.txt  backend.cpp  backend.h  lambda.h  main.cpp
lib/: CMakeLists.txt  README.md  counter.cpp  faasm.cpp  func.cpp  libfaasm.imports  matrix.cpp  memory.cpp  print.cpp  python.cpp  random.cpp  sgd.cpp  time.cpp
lib-c/: CMakeLists.txt  core.c  libfaasm.imports
lib-cpp/: CMakeLists.txt  README.md  compare.cpp  core.cpp  counter.cpp  files.cpp  input.cpp  matrix.cpp  print.cpp  pyfaasm.c  random.cpp  setup.py  sgd.cpp  state.cpp  zygote.cpp
lib-faasmp/: CMakeLists.txt  README.md  faasmp.cpp  faasmp.imports  mpi.cpp  mpi.h  z_Linux_asm.S
lib-pyinit/: CMakeLists.txt  README.md  pyinit.c
lib-rust/: CMakeLists.txt  README.md
python/: CMakeLists.txt  pyfaasm.c  python_shared_obj.txt
sgd/: CMakeLists.txt  sgd_barrier.cpp  sgd_begin.cpp  sgd_constants.h  sgd_epoch.cpp  sgd_native.cpp  sgd_step.cpp
test/: CMakeLists.txt  main.cpp  state.cpp  utils.h
test_aws/: CMakeLists.txt
test_ibm/: CMakeLists.txt  main.cpp
test_integration/: CMakeLists.txt  main.cpp
test_knative/: CMakeLists.txt  main.cpp
test_utils/: CMakeLists.txt  matrix_utils.cpp  message_utils.cpp  system_utils.cpp  utils.h  worker_utils.cpp
(+2247 files in other folders)
